initial attempt at organizing stuff neatly - csharp script for generation, replaced by static lib + CLI app

--- a/src/gen/templates/test.cpp.razor
+++ b/src/gen/templates/test.cpp.razor
@@ -1,7 +1,7 @@
 #include <stdio.h>
 
 void printTypeNames() {
-    @foreach (Type type in @Model.Types) {
+    @foreach (Type type in @Model.GetExportedTypes()) {
         @:printf("@type.Name");
     }
 }
