--- a/src/CodeGen/CodeGenCLI/Templates/Test.cpp.cshtml
+++ b/src/CodeGen/CodeGenCLI/Templates/Test.cpp.cshtml
@@ -1,7 +1,9 @@
+@model System.Reflection.Assembly
+
 #include <stdio.h>
 
 void printTypeNames() {
     @foreach (Type type in @Model.GetExportedTypes()) {
-        @:printf("sub file @type.Name");
+        @:printf("@type.Name");
     }
 }
